move_semantics1/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-zaychyk/rustlings-zaychyk/format_check)
error[E0596]: cannot borrow `vec1` as mutable, as it is not declared as mutable
  --> src/lib.rs:15:5
   |
15 |     vec1.push(88);
   |     ^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
11 |     let mut vec1 = fill_vec(vec0);
   |         +++

For more information about this error, try `rustc --explain E0596`.
error: could not compile `format_check` (lib) due to 1 previous error

[!] Source code format check: FAILED
